--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <description>API-BLOG</description>
     <properties>
         <java.version>17</java.version>
+        <spring-security.version>6.3.3</spring-security.version>
     </properties>
     <dependencies>
         <dependency>
